--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
     --second-color: #172139;
     --bg-color: #f4f4f4;
     --white-color: #ffffff;
+    --dark-color: #000;
 }
 // imports;
 
@@ -33,8 +34,6 @@
 .page {
     margin-top: 30px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
     gap: 30px;
     &__menu {
         &-list {
@@ -47,12 +46,17 @@
         }
 
         &-link {
+            color: var(--second-color);
             padding: 0 15px;
             width: 290px;
             height: 62px;
             display: flex;
             align-items: center;
             gap: 10px;
+            &--active {
+                background-color: var(--second-color);
+                color: var(--white-color);
+            }
         }
 
         &-lable {
@@ -63,7 +67,6 @@
             letter-spacing: 0%;
             text-align: left;
         }
-
         &-img {
             width: 15px;
             height: 14px;
@@ -76,5 +79,62 @@
             align-items: center;
             gap: 10px;
         }
+    }
+
+    &__content {
+        width: calc(100% - 290px);
+        padding-right: 30px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__loc {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        gap: 30px;
+        &-list {
+            display: flex;
+            gap: 44.5px;
+        }
+
+        &-title {
+            color: var(--dark-color);
+            font-family: Futura PT;
+            font-size: 32px;
+            font-weight: 600;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: left;
+        }
+
+        &-link {
+            width: 165px;
+            height: 37px;
+            padding: 10px;
+            background: rgb(255, 255, 255);
+            border-radius: 5px;
+
+            color: var(--dark-color);
+            font-family: Futura PT;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 18px;
+            letter-spacing: 0%;
+            text-align: center;
+            &--active {
+                background-color: var(--second-color);
+                color: var(--white-color);
+            }
+        }
+    }
+    &__sync {
+        width: 50%;
+        padding-top: 50px;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 25px;
     }
 }
