--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,29 @@
   height: 50px;
 }
 
+.checkbox {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 20px;
+  height: 20px;
+}
+.checkbox::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--first-color);
+  border-radius: 5px;
+}
+.checkbox:checked::before {
+  background-color: var(--first-color);
+  background-image: url(../img/chek.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+}
+
 :root {
   --first-color: #ff6600;
   --second-color: #172139;
@@ -225,4 +248,36 @@
   flex-direction: column;
   align-items: end;
   gap: 25px;
+}
+.page__sync-search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.page__sync-search-input {
+  width: 300px;
+  height: 50px;
+  padding: 15px 39px;
+  background-image: url(../img/search.svg);
+  border: 1px solid #d7d7d7;
+  background-repeat: no-repeat;
+  background-position: center left 15px;
+  color: #d7d7d7;
+  font-family: Futura PT;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: 10%;
+  text-align: left;
+  text-transform: uppercase;
+}
+.page__sync-search-lable {
+  color: var(--dark-color);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0%;
+  text-align: left;
 }/*# sourceMappingURL=style.css.map */
