--- a/scss/_unify.scss
+++ b/scss/_unify.scss
@@ -45,5 +45,25 @@
         height: 50px;
     }
 }
-// .chek {
-// }
+
+.checkbox {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    &::before {
+        content: "";
+        display: block;
+        width: 20px;
+        height: 20px;
+        border: 1px solid var(--first-color);
+        border-radius: 5px;
+    }
+
+    &:checked::before {
+        background-color: var(--first-color);
+        background-image: url(../img/chek.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 10px;
+    }
+}
