--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,31 @@
   padding: 11 15px;
   background-color: var(--bg-color);
 }
+.container__close {
+  display: none;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 15px;
+  right: 15px;
+  z-index: 5;
+  cursor: pointer;
+}
+.container--active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: var(--dark-color);
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+.container--active .container__close {
+  display: block;
+}
 
 .header {
   background-color: var(--white-color);
