--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,34 @@
     margin: 0 auto;
     padding: 11 15px;
     background-color: var(--bg-color);
+    &__close {
+        display: none;
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        top: 15px;
+        right: 15px;
+        z-index: 5;
+        cursor: pointer;
+    }
+    &--active {
+        &::after {
+            content: "";
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: var(--dark-color);
+            opacity: 0.5;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 4;
+        }
+
+        .container__close {
+            display: block;
+        }
+    }
 }
 .header {
     background-color: var(--white-color);
@@ -42,6 +70,7 @@
     margin-top: 30px;
     display: flex;
     gap: 30px;
+
     &__menu {
         &-list {
             padding: 20px 15px;
