--- a/scss/_unify.scss
+++ b/scss/_unify.scss
@@ -8,6 +8,7 @@
     align-items: center;
     border-radius: 10px;
     gap: 10px;
+    cursor: pointer;
     &__img {
         width: 13px;
         height: 13px;
