--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@
   align-items: center;
   border-radius: 10px;
   gap: 10px;
+  cursor: pointer;
 }
 .batton__img {
   width: 13px;
@@ -130,7 +131,17 @@
   --dark-color: #000;
 }
 
+html,
+body {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 .container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   max-width: 1920px;
   margin: 0 auto;
   padding: 11 15px;
@@ -255,6 +266,13 @@
   letter-spacing: 0%;
   text-align: left;
 }
+.page__loc-title--options {
+  height: 32px;
+}
+.page__loc-title--options {
+  width: 100%;
+  gap: 50px;
+}
 .page__loc-link {
   width: 165px;
   height: 37px;
@@ -324,4 +342,79 @@
   line-height: 17px;
   letter-spacing: 0%;
   text-align: left;
+}
+.page__sync-btn {
+  cursor: pointer;
+}
+
+.page__table {
+  margin-top: 41.5px;
+}
+.page__table-title {
+  color: var(--dark-color);
+  font-family: Futura PT;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.page__footer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px;
+}
+.page__footer-text {
+  color: var(--dark-color);
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.page__footer-doc {
+  display: flex;
+  gap: 7px;
+}
+.page__footer-dokText {
+  width: 170px;
+  color: var(--first-color);
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration-line: underline;
+}
+.page__footer-pharagraph {
+  display: flex;
+  gap: 30px;
+  margin: 0 auto;
+}
+.page__footer-text {
+  color: rgb(165, 165, 165);
+  font-family: Montserrat;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 15px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+.page__footer-svg {
+  width: 20px;
+  height: 20px;
+}
+
+.header,
+.page__footer {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+.page {
+  flex-grow: 1;
 }/*# sourceMappingURL=style.css.map */
