--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,9 +9,18 @@
     --white-color: #ffffff;
     --dark-color: #000;
 }
-// imports;
+
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 .container {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
     max-width: 1920px;
     margin: 0 auto;
     padding: 11 15px;
@@ -123,6 +132,7 @@
         display: flex;
         justify-content: space-between;
     }
+
     &__loc {
         width: 50%;
         display: flex;
@@ -143,6 +153,14 @@
             line-height: 100%;
             letter-spacing: 0%;
             text-align: left;
+            &--options {
+                height: 32px;
+            }
+
+            &--options {
+                width: 100%;
+                gap: 50px;
+            }
         }
 
         &-link {
@@ -165,6 +183,7 @@
             }
         }
     }
+
     &__sync {
         width: 50%;
         padding-top: 50px;
@@ -208,5 +227,82 @@
                 text-align: left;
             }
         }
+
+        &-btn {
+            cursor: pointer;
+        }
     }
+}
+
+.page__table {
+    margin-top: 41.5px;
+
+    &-title {
+        color: var(--dark-color);
+        font-family: Futura PT;
+        font-size: 32px;
+        font-weight: 600;
+        line-height: 100%;
+        letter-spacing: 0%;
+        text-align: left;
+    }
+}
+
+.page__footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+
+    &-text {
+        color: var(--dark-color);
+        font-family: Montserrat;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 17px;
+        letter-spacing: 0%;
+        text-align: left;
+    }
+    &-doc {
+        display: flex;
+        gap: 7px;
+    }
+    &-dokText {
+        width: 170px;
+        color: var(--first-color);
+        font-family: Montserrat;
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 20px;
+        letter-spacing: 0%;
+        text-align: left;
+        text-decoration-line: underline;
+    }
+    &-pharagraph {
+        display: flex;
+        gap: 30px;
+        margin: 0 auto;
+    }
+    &-text {
+        color: rgb(165, 165, 165);
+        font-family: Montserrat;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 15px;
+        letter-spacing: 0%;
+        text-align: left;
+    }
+
+    &-svg {
+        width: 20px;
+        height: 20px;
+    }
+}
+.header,
+.page__footer {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+.page {
+    flex-grow: 1;
 }
